edited dependencies versions

--- a/create.ini
+++ b/create.ini
@@ -28,28 +28,28 @@ APT_PKGS="make automake libtool gcc wget git unzip"
 #
 # go get ...
 #
-GO_PKGS="${GO_PKGS} golang.org/x/net/context"
-GO_PKGS="${GO_PKGS} golang.org/x/tools/cmd/goimports"
-GO_PKGS="${GO_PKGS} google.golang.org/grpc"
-GO_PKGS="${GO_PKGS} github.com/golang/protobuf/proto"
-GO_PKGS="${GO_PKGS} github.com/golang/protobuf/protoc-gen-go"
-GO_PKGS="${GO_PKGS} github.com/sirupsen/logrus"
+GO_PKGS="${GO_PKGS} golang.org/x/net/context@v0.0.0-20190620200207-3b0461eec859"
+GO_PKGS="${GO_PKGS} golang.org/x/tools/cmd/goimports@v0.0.0-20200130002326-2f3ba24bd6e7"
+GO_PKGS="${GO_PKGS} google.golang.org/grpc@aff571c"
+GO_PKGS="${GO_PKGS} github.com/golang/protobuf/proto@ae97035"
+GO_PKGS="${GO_PKGS} github.com/golang/protobuf/protoc-gen-go@ae97035"
+GO_PKGS="${GO_PKGS} github.com/sirupsen/logrus@bdc0db8"
 GO_PKGS="${GO_PKGS} github.com/hiepon/go-netconf/netconf"
 GO_PKGS="${GO_PKGS} github.com/hiepon/go-netconf/ncclient"
-GO_PKGS="${GO_PKGS} github.com/lxc/lxd/client"
-GO_PKGS="${GO_PKGS} github.com/BurntSushi/toml"
-GO_PKGS="${GO_PKGS} github.com/spf13/viper"
-GO_PKGS="${GO_PKGS} github.com/vishvananda/netlink"
+GO_PKGS="${GO_PKGS} github.com/lxc/lxd/client@1e699cf"
+GO_PKGS="${GO_PKGS} github.com/BurntSushi/toml@641c3cf"
+GO_PKGS="${GO_PKGS} github.com/spf13/viper@bd03865"
+GO_PKGS="${GO_PKGS} github.com/vishvananda/netlink@f049be6"
 GO_PKGS="${GO_PKGS} github.com/fsnotify/fsnotify"
 
 #
 # golang version
 #
-GO_VER=1.12.3
+GO_VER=1.16
 GO_URL=https://dl.google.com/go
 
 #
 # protobuf version
 #
-PROTOC_VER=3.6.1
+PROTOC_VER=3.9.1
 PROTOC_URL=https://github.com/google/protobuf/releases/download/v${PROTOC_VER}
