Fixed git repos invalid directory location

--- a/create.ini
+++ b/create.ini
@@ -34,13 +34,12 @@ GO_PKGS="${GO_PKGS} google.golang.org/grpc@aff571c"
 GO_PKGS="${GO_PKGS} github.com/golang/protobuf/proto@ae97035"
 GO_PKGS="${GO_PKGS} github.com/golang/protobuf/protoc-gen-go@ae97035"
 GO_PKGS="${GO_PKGS} github.com/sirupsen/logrus@bdc0db8"
-GO_PKGS="${GO_PKGS} github.com/hiepon/go-netconf/netconf"
-GO_PKGS="${GO_PKGS} github.com/hiepon/go-netconf/ncclient"
+GO_PKGS="${GO_PKGS} github.com/Juniper/go-netconf/netconf@8a71e82"
 GO_PKGS="${GO_PKGS} github.com/lxc/lxd/client@1e699cf"
 GO_PKGS="${GO_PKGS} github.com/BurntSushi/toml@641c3cf"
 GO_PKGS="${GO_PKGS} github.com/spf13/viper@bd03865"
 GO_PKGS="${GO_PKGS} github.com/vishvananda/netlink@f049be6"
-GO_PKGS="${GO_PKGS} github.com/fsnotify/fsnotify"
+GO_PKGS="${GO_PKGS} github.com/fsnotify/fsnotify@1485a34"
 
 #
 # golang version
